2000-09-01  JP Rosevear  <jpr@helixcode.com>

	* configure.in: We don't need AC_PROG_RANLIB and
	AM_PROG_LIBTOOL

	* src/libical/icalyacc.y (clear_recur): Explicitly
	set the week_start to the Monday default in case the
	recurrence rule does not.

2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* Kill off more old, dead files
	
2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* MacOS: This dir is not in 0.19
	
2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* src/libical/CHANGES: This file is not in 0.19
	
2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* src/libical/.gdb_history: Kill file

	* src/libical/.gdb_history: Kill file
	
2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* configure.in: Don't list config.h in AC_OUTPUT
	
2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* src/pvl/Makefile: Kill old file

	* src/test/usecases.c: Kill old file

	* src/test/.cvsignore: Update

	* src/libicalvcal/.cvsignore: Update

	* examples/.cvsignore: Shut up

2000-08-26  Ettore Perazzoli  <ettore@helixcode.com>

	* examples/Makefile.am (INCLUDES): More `$(srcdir)' loving.

	* src/libicalvcal/Makefile.am (INCLUDES): Add `-I
	$(srcdir)/../libical' for builddir != srcdir loving.

2000-08-25  Christopher James Lahey  <clahey@helixcode.com>

	* examples/access_properties_and_parameters.c,
	src/libicalvcal/vcc.y: Got rid of some warnings.

	* src/libicalvcal/vcc.c: Checking in generated C file.

2000-08-25  Christopher James Lahey  <clahey@helixcode.com>

	* src/libical/icalcomponent.c: Fixed an incorrect struct name.

2000-08-25  Peter Williams  <peterw@helixcode.com>

	* src/libical/icalcomponent.c (icalcomponent_end_component): Compile fix;
	use icalerror_check_arg_re so we can return an valid icalcompiter.
	(icalcomponent_begin_component): Same.

2000-08-24  JP Rosevear  <jpr@helixcode.com>

	* src/libical/icalvcal.h: Remove this duplicate file to fix build

2000-08-24  Federico Mena Quintero  <federico@helixcode.com>

	* src/test/Makefile.am: Make it work.
